# TG_Cloud-Drive

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  a11_verify.py  a12_verify.py  a8_ui_verify.py  a8_verify.py  admin_test_channels.py  bind_email_ui_verify.py  bind_email_verify.py  docker-compose.yml  e2e_post_sprint.py  nginx.conf  quickstart.sh  share_payload_debug.py  start.sh  wrangler.jsonc  代码审查报告.md  启动指南.md  灵感笔记.md  项目协作宪章.md
.claude/: settings.json
.github/workflows/: ci.yml
archive/python-flask-v1/: app.py  app_v2.py
backend/: .dockerignore  Dockerfile  jest.config.js  package-lock.json  package.json
backend/migrations/: 001-fulltext-search.sql  002-pgvector.sql  003-note-templates.sql  004-ocr-text.sql
backend/src/: app.controller.spec.ts  app.integration.spec.ts  app.module.ts  main.ts
clipper/: manifest.json
clipper/src/: background.js  content.js
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/src/: auth.rs  lib.rs  main.rs  sync.rs
docs/: PRD_v1.1.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
tests/e2e/: a12_verify.py  a8_verify.py  bind_email_verify.py  browser-smoke.py  (+29 more)
worker/: package-lock.json  package.json  wrangler.toml
(+195 files in other folders)
