[package]
name = "tgpan-desktop"
version = "1.0.0"
description = "TG Cloud Drive Desktop Sync Client"
authors = ["TG Pan"]
edition = "2021"

[lib]
name = "tgpan_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = "3"
